# kubernetes-autoscaling

./: .gitignore  PROMETHEUS_QUERIES.md  REWARD_SYSTEM.md  compose.yaml  main.py  mediamtx.yml  pyproject.toml  requirements.txt  ruff.toml  test-prometheus.sh  test_prometheus.py
agent/: .env.example  func.py  hpa.env.example  hpa.py  lab.ipynb  model.py  offline_train.py  pyproject.toml  run.py  run_stable.py  test.env.example  test.py  train.py  train_with_csv.py  trainer.py
agent/database/: influxdb.py
agent/environment/: environment.py  environment_fast.py
agent/model/final/: 1758980688.404279.pkl
agent/old/: environment_old.py  offline_train_old.py  pyproject.toml
agent/rl/: dqn.py  network.py  q.py  replay_buffer.py
agent/scratch/: offline_train.py  print_q.py  pyproject.toml
agent/scratch/environment/: __init__.py
agent/scratch/rl/: __init__.py  network.py  q.py
agent/scripts/: generate_training_csv.py  verify_reward_alignment.py
agent/stable/: .env.example  .gitignore  PROMETHEUS_QUERIES.md  lab.ipynb  monitor.py  offline_train.py  pyproject.toml  run.py  train.py  train_heuristic.py
agent/stable/environment/: __init__.py  environment.py  heuristic_dqn.py
agent/stable/scripts/: convert_for_stable_simple.py
agent/stable/utils/: __init__.py  cluster.py  csv_logger.py  logger.py  metrics.py  monitor.py
agent/stable_forecast/: .env.example  .gitignore  MANUAL_REWARD_FUNCTION.md  REWARD_FUNCTION_A_ONLY.md  REWARD_FUNCTION_COMPARISON.md  lab.ipynb  offline_train.py  pyproject.toml  run.py  run_calibrated.py  train.py  train_default.py
agent/stable_forecast/environment/: environment.py  heuristic_dqn.py
agent/stable_forecast/utils/: csv_logger.py  metrics.py
agent/stable_fuzzy/: monitor.py  offline_train.py  pyproject.toml  run.py  train.py
agent/stable_fuzzy/environment/: environment.py
agent/stable_simple/: .env.example  MANUAL_REWARD_FUNCTION.md  PROMETHEUS_QUERIES.md  REWARD_FUNCTION_COMPARISON.md  lab.ipynb  monitor.py  offline_train.py  offline_train_full.py  pyproject.toml  train.py
agent/stable_simple/database/: influxdb.py
agent/stable_simple/environment/: __init__.py  environment.py
agent/stable_simple/utils/: cluster.py
agent/utils/: __init__.py  cluster.py  error.py  helper.py  logger.py  metrics.py
app/: Dockerfile  README.md  app.yaml  configmap.yaml  delete.sh  deploy.sh  deployment.yaml  hpa.yaml  main.py  monitor.yaml  pool.yaml  pyproject.toml  requirements.txt  test-malloc.sh  test.sh
app/hpa/: configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  monitor.yaml
app/secondary/: configmap.yaml  deploy.sh  deployment.yaml  monitor.yaml
app/test/: configmap.yaml  deploy.sh  deployment.yaml  monitor.yaml
database/: .env.example  compose.yaml
demo/: nginx-deployment-status.yaml  nginx-deployment.yaml  nginx-service.yaml  nodejs.yaml
env/: agent.py  environment.py
env/utils/: __init__.py  helper.py  metrics.py
kubernetes/: prometheus.yaml
lab/: agent.ipynb  atari.ipynb  custom.ipynb  driving.ipynb  lab.ipynb
media/: media.yaml
metrics/: all_pods.txt  values.yaml
model/: agent.py  train.py
model/environment/: __init__.py
model/environment/utils/: helper.py  metrics.py
result/: .gitignore  lab.ipynb
result/default/deskriptif_test/: lab.ipynb
result/default/inferensial_test/: lab.ipynb
result/fuzzy/deskriptif_test/: lab.ipynb
result/inferensial_test/: lab.ipynb
result/simple/: fetch_data.py  time_windows.csv
simulation/: REWARD_SYSTEM.md  env.ipynb  load.py  load.sh  simulation_environment.py  train.ipynb  train.py
simulation/load/: load.sh  phase2.sh  phase3.sh  phase4.sh
test/: .env.example  .env.second  EXAMPLES.md  EXTENDED_DURATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  TESTS_SUMMARY.md  k6-autoscaler-edge-cases.js  k6-autoscaler-training.js  k6-autoscaler-weekly.js  k6-cpu-stress.js  k6-memory-stress.js  k6-rl-autoscaler.js  k6-spike.js  k6-train.js  k6.js  observation_demo.py  run-k6.sh  run.sh  test-response-time-by-replicas.sh  train.js
test/analysis/: README.md  notebook.ipynb  notebook_update.ipynb
trash/: cluster copy.py  cluster.py  func.py  q.py
trash/app/: Dockerfile  main.py  monitor.yaml  pyproject.toml  requirements.txt
trash/demo/: nginx-deployment.yaml  nginx-service.yaml
trash/simulation/: env.ipynb  simulation_environment.py  train.ipynb
(+320 files in other folders)
