[project]
name = "autoscaling"
version = "0.1.0"
description = "Project for research at ICN Laboratory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "kubernetes>=33.1.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "stable-baselines3[extra]>=2.6.0",
    "aiohttp>=3.12.14",
    "requests>=2.32.4",
    "numpy>=2.1.3",
    "flask>=3.1.1",
    "prometheus-client>=0.22.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "prometheus-api-client>=0.6.0",
    "python-dotenv>=1.1.1",
    "influxdb-client>=1.49.0",
    "seaborn>=0.13.2",
]

# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
# ]
# torchvision = [
#     { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
# ]
# torchaudio = [
#     { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
# ]

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true

[dependency-groups]
app = [
    "flask>=3.1.1",
    "prometheus-client>=0.22.1",
]
dev = [
    "box2d>=2.3.10",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbqa>=1.9.1",
    "tensorboard>=2.19.0",
]

[tool.uv.workspace]
members = [
    "agent",
]

[tool.uv]
compile-bytecode = true

[tool.pip]
compile-bytecode = true