[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "rl-autoscale>=1.0.3",
]

[tool.uv]
compile-bytecode = true

[tool.pip]
compile-bytecode = true
